--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Belajar Android Dasar</string>
+    <string name="say_baby">Say Baby</string>
 </resources>
